# cdes-sdk-python

./: .gitignore  README.md  RELEASE_NOTES.md  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  python-ci.yml
cdes/: __init__.py  models.py  normalizer.py  reference.py  telemetry.py  validators.py
