[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdes"
version = "0.1.0"
description = "Cannabis Data Exchange Standard (CDES) Python SDK"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Acidni LLC", email = "support@acidni.net"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://cdes.acidni.net"
Documentation = "https://cdes.acidni.net/getting-started"
Repository = "https://github.com/Acidni-LLC/cdes-sdk-python"
Issues = "https://github.com/Acidni-LLC/cdes-sdk-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cdes*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
