[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdes"
version = "1.1.0"
description = "Cannabis Data Exchange Standard (CDES) Python SDK"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Acidni LLC", email = "support@acidni.net"}
]
keywords = ["cannabis", "data", "standard", "cdes", "terpenes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0", "mypy>=1.0"]

[project.urls]
Homepage = "https://cdes.acidni.net"
Repository = "https://github.com/Acidni-LLC/cdes-sdk-python"

[tool.setuptools.packages.find]
where = ["."]
