[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdes"
version = "1.2.2"
description = "Cannabis Data Exchange Standard (CDES) Python SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Acidni LLC", email = "dev@acidni.net" }
]
keywords = ["cannabis", "cdes", "data-exchange", "terpenes", "cannabinoids", "genetics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Acidni-LLC/cdes-sdk-python"
Documentation = "https://cdes.terprint.com"
Repository = "https://github.com/Acidni-LLC/cdes-sdk-python.git"
Issues = "https://github.com/Acidni-LLC/cdes-sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["cdes"]

[tool.hatch.build.targets.sdist]
include = [
    "/cdes",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
